Changed toList() from streams